--- a/apps/supremegaming-angular/src/app/modules/frame/components/header/header.component.html
+++ b/apps/supremegaming-angular/src/app/modules/frame/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="column12 nav">
     <div class="branding-block">
       <!-- <img src="assets/images/logo.png" alt="Logo" /> -->
-      <h1 class="visions" [routerLink]="['/']" routerLinkActive="router-link-active">SG</h1>
+      <h1 class="visions" [routerLink]="['/']" routerLinkActive="router-link-active">Supreme Gaming</h1>
     </div>
 
     <nav class="module-navigation">
