--- a/apps/supremegaming-angular/src/app/modules/frame/components/sub-header/sub-header.component.scss
+++ b/apps/supremegaming-angular/src/app/modules/frame/components/sub-header/sub-header.component.scss
@@ -2,12 +2,11 @@
 
 :host {
   @include flexbox();
-  background-color: lighten(#5a4350, 10%);
   min-height: 3px;
 }
 
 .sub-header {
   @include flexbox();
-  @include flex-direction(row);
+  @include flex-direction(row-reverse);
   @include justify-content(space-between);
 }
