Added Atlas feature modules

--- a/apps/supremegaming-angular/src/app/modules/frame/components/header/header.component.html
+++ b/apps/supremegaming-angular/src/app/modules/frame/components/header/header.component.html
@@ -45,25 +45,25 @@
                 <div class="sub-sub-menu">
                   <ul>
                     <li>
-                      <a>
+                      <a [routerLink]="['/games/atlas/rules']">
                         <span>Rules</span>
                         <span>The pirate code, or the plank</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
+                      <a [routerLink]="['/games/atlas/players-and-tribes']">
                         <span>Companies & Players</span>
                         <span>Learn about company membership</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
+                      <a [routerLink]="['/games/atlas/mods']">
                         <span>Mods</span>
                         <span>Mod collection featured in-game</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
+                      <a [routerLink]="['/games/atlas/plugins']">
                         <span>Plugins</span>
                         <span>Shop, kits, cross-grid chat, and more!</span>
                       </a>
