--- a/apps/supremegaming-angular/src/app/modules/games/games.component.html
+++ b/apps/supremegaming-angular/src/app/modules/games/games.component.html
@@ -1,18 +1,5 @@
-<app-sub-header>
-  <div class="left-content">
-    <a href="http://">Rules</a>
-    <a href="http://">Mods</a>
-    <a href="http://">Drop Table</a>
-    <a href="http://">Players &amp; Tribes</a>
-  </div>
-</app-sub-header>
-
 <section class="root">
   <div class="container12">
-    <div class="column12">
-      <h2>Games</h2>
-
-      <p>Game details go here.</p>
-    </div>
+    <router-outlet></router-outlet>
   </div>
 </section>
