--- a/libs/scss/_colors.scss
+++ b/libs/scss/_colors.scss
@@ -6,6 +6,8 @@ $primary_darkened: darken($primary, 5%);
 // $secondary: #d322ff;
 $secondary: #ff22e2;
 
+// $terciary: #ffce48;
+
 $support: #d5d7e4;
 $white: #ffffff;
 
