Moved angular site innards to libs

--- a/libs/pages/public/src/lib/community/community.component.html
+++ b/libs/pages/public/src/lib/community/community.component.html
@@ -10,7 +10,7 @@
 <section class="root">
   <div class="container12">
     <div class="column8">
-      <content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingCoalitionRules/master/Ark/PVE/pve.md"></content-fragment>
+      <supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingCoalitionRules/master/Ark/PVE/pve.md"></supremegaming-content-fragment>
     </div>
   </div>
 </section>
