Added ark feature modules

--- a/libs/pages/public/src/lib/games/modules/ark/ark.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/ark.component.html
@@ -1,11 +1,12 @@
 <div class="column12">
   <app-sub-header>
     <div class="left-content">
-      <a [routerLink]="['./']" routerLinkActive="active-sub-menu" [routerLinkActiveOptions]="{exact: true}">Atlas</a>
+      <a [routerLink]="['./']" routerLinkActive="active-sub-menu" [routerLinkActiveOptions]="{exact: true}">Ark</a>
       <a [routerLink]="['rules']" routerLinkActive="active-sub-menu">Rules</a>
-      <a [routerLink]="['players-and-tribes']" routerLinkActive="active-sub-menu">Players &amp; Companies</a>
+      <a [routerLink]="['players-and-tribes']" routerLinkActive="active-sub-menu">Players &amp; Tribes</a>
       <a [routerLink]="['mods']" routerLinkActive="active-sub-menu">Mods</a>
       <a [routerLink]="['plugins']" routerLinkActive="active-sub-menu">Plugins</a>
+      <a [routerLink]="['supply-drops']" routerLinkActive="active-sub-menu">Supply Drops</a>
     </div>
   </app-sub-header>
 </div>
