--- a/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
+++ b/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
@@ -79,32 +79,32 @@
                 <div class="sub-sub-menu">
                   <ul>
                     <li>
-                      <a href="">
+                      <a [routerLink]="['/games/ark/rules']">
                         <span>Rules</span>
                         <span>In-game PVE and PVP rules</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
+                      <a [routerLink]="['/games/ark/players-and-tribes']">
                         <span>Tribes & Players</span>
                         <span>Learn about tribe membership</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
+                      <a [routerLink]="['/games/ark/mods']">
                         <span>Mods</span>
                         <span>Mod collection featured in-game</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
+                      <a [routerLink]="['/games/ark/plugins']">
                         <span>Plugins</span>
                         <span>Shop, kits, cross-ark chat, and more!</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
-                        <span>Drop Table</span>
+                      <a [routerLink]="['/games/ark/supply-drops']">
+                        <span>Supply Drops Table</span>
                         <span>Maximize your next supply drop run</span>
                       </a>
                     </li>
