Added ark pf feature modules

--- a/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
+++ b/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
@@ -81,7 +81,7 @@
                     <li>
                       <a [routerLink]="['/games/ark/rules']">
                         <span>Rules</span>
-                        <span>In-game PVE and PVP rules</span>
+                        <span>In-game PVE you must follow as a player</span>
                       </a>
                     </li>
                     <li>
@@ -106,6 +106,40 @@
                       <a [routerLink]="['/games/ark/supply-drops']">
                         <span>Supply Drops Table</span>
                         <span>Maximize your next supply drop run</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </li>
+              <li class="descriptive-menu-item">
+                <a [routerLink]="['/games/ark-pf']" routerLinkActive="router-link-active">
+                  <span>Ark: Primal Fear</span>
+                  <span>A hardcore ark experience for those looking for a challenge.</span>
+                </a>
+                <div class="sub-sub-menu">
+                  <ul>
+                    <li>
+                      <a [routerLink]="['/games/ark-pf/rules']">
+                        <span>Rules</span>
+                        <span>In-game rules for Ark: PF</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a [routerLink]="['/games/ark-pf/players-and-tribes']">
+                        <span>Tribes & Players</span>
+                        <span>Learn about tribe membership</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a [routerLink]="['/games/ark-pf/mods']">
+                        <span>Mods</span>
+                        <span>Mod collection featured in-game</span>
+                      </a>
+                    </li>
+                    <li>
+                      <a [routerLink]="['/games/ark-pf/plugins']">
+                        <span>Plugins</span>
+                        <span>Shop, kits, cross-ark chat, and more!</span>
                       </a>
                     </li>
                   </ul>
