Added Conan AoC feature modules

--- a/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
+++ b/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
@@ -52,7 +52,7 @@
                     </li>
                     <li>
                       <a [routerLink]="['/games/atlas/players-and-tribes']">
-                        <span>Companies & Players</span>
+                        <span>Players &amp; Companies</span>
                         <span>Learn about company membership</span>
                       </a>
                     </li>
@@ -86,7 +86,7 @@
                     </li>
                     <li>
                       <a [routerLink]="['/games/ark/players-and-tribes']">
-                        <span>Tribes & Players</span>
+                        <span>Players &amp; Tribes</span>
                         <span>Learn about tribe membership</span>
                       </a>
                     </li>
@@ -126,7 +126,7 @@
                     </li>
                     <li>
                       <a [routerLink]="['/games/ark-pf/players-and-tribes']">
-                        <span>Tribes & Players</span>
+                        <span>Players &amp; Tribes</span>
                         <span>Learn about tribe membership</span>
                       </a>
                     </li>
@@ -146,72 +146,32 @@
                 </div>
               </li>
               <li class="descriptive-menu-item">
-                <a [routerLink]="['/games/conan']" routerLinkActive="router-link-active">
-                  <span>Conan Exiles AoC (Public)</span>
+                <a [routerLink]="['/games/conan-aoc']" routerLinkActive="router-link-active">
+                  <span>Conan Exiles AoC</span>
                   <span>Get lost in a barbaric world of fantasy</span>
                 </a>
                 <div class="sub-sub-menu">
                   <ul>
                     <li>
-                      <a href="">
+                      <a [routerLink]="['/games/conan-aoc/rules']">
                         <span>Rules</span>
                         <span>The law of the sands</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
-                        <span>Clans & Players</span>
+                      <a [routerLink]="['/games/conan-aoc/players-and-tribes']">
+                        <span>Players &amp; Clans</span>
                         <span>Learn about clan membership</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
+                      <a [routerLink]="['/games/conan-aoc/mods']">
                         <span>Mods</span>
                         <span>Mod collection featured in-game</span>
                       </a>
                     </li>
                     <li>
-                      <a href="">
-                        <span>Pippi</span>
-                        <span>Kits, currency, ranks, and more!</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="descriptive-menu-item">
-                <a [routerLink]="['/games/conan']" routerLinkActive="router-link-active">
-                  <span>Conan Exiles RP (Whitelist)</span>
-                  <span>Role play to your heart's content in a barbaric world of fantasy.</span>
-                </a>
-                <div class="sub-sub-menu">
-                  <ul>
-                    <li>
-                      <a href="">
-                        <span>Rules</span>
-                        <span>Roleplay rules and code of conduct</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="">
-                        <span>Application</span>
-                        <span>Interested in joining? Apply today!</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="">
-                        <span>Clans & Players</span>
-                        <span>Learn about clan membership</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="">
-                        <span>Mods</span>
-                        <span>Mod collection featured in-game</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="">
+                      <a [routerLink]="['/games/conan-aoc/pippi']">
                         <span>Pippi</span>
                         <span>Kits, currency, ranks, and more!</span>
                       </a>
