--- a/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
+++ b/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
@@ -24,7 +24,7 @@
                 </a>
               </li>
               <li class="descriptive-menu-item">
-                <a href="http://">
+                <a href="https://supremegaming.gg/forums">
                   <span>Forums</span>
                   <span>Archive, long-term discussions, lore, and more!</span>
                 </a>
