Added support item to community dropdown

--- a/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
+++ b/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
@@ -18,6 +18,12 @@
                 </a>
               </li>
               <li class="descriptive-menu-item">
+                <a [routerLink]="['/community/support']" routerLinkActive="router-link-active">
+                  <span>Getting Support</span>
+                  <span>Have an issue? Learn to to request support</span>
+                </a>
+              </li>
+              <li class="descriptive-menu-item">
                 <a href="https://discord.gg/supremegaming" target="_blank" rel="noopener noreferrer">
                   <span>Discord</span>
                   <span>Connect with the community, make friends, and get support</span>
