Added content parser component to all user-editable feature module pages
Pages like rules, mods, plugins, etc. that are edited on github directly.

--- a/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-plugins/ark-pf-plugins.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-plugins/ark-pf-plugins.component.html
@@ -1,1 +1,1 @@
-<p>Ark PF plugins go here.</p>
+<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Ark/PrimalFear/plugins.md"></supremegaming-content-fragment>
