--- a/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-rules/ark-pf-rules.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-rules/ark-pf-rules.component.html
@@ -1,1 +1,1 @@
-<p>Ark PF rules go here.</p>
+<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Ark/PrimalFear/rules.md"></supremegaming-content-fragment>
