--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-plugins/ark-plugins.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-plugins/ark-plugins.component.html
@@ -1,1 +1,1 @@
-<p>Ark plugins go here.</p>
+<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Ark/PVE/plugins.md"></supremegaming-content-fragment>
