--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-rules/ark-rules.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-rules/ark-rules.component.html
@@ -1,1 +1,1 @@
-<p>Ark rules go here.</p>
+<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Ark/PVE/rules.md"></supremegaming-content-fragment>
