--- a/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-mods/atlas-mods.component.html
+++ b/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-mods/atlas-mods.component.html
@@ -1,1 +1,1 @@
-<p>Atlas mods go here. Markdown.</p>
+<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Atlas/mods.md"></supremegaming-content-fragment>
