--- a/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-plugins/atlas-plugins.component.html
+++ b/libs/pages/public/src/lib/games/modules/atlas/modules/atlas-plugins/atlas-plugins.component.html
@@ -1,1 +1,1 @@
-<p>Atlas plugins go here.</p>
+<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Atlas/plugins.md"></supremegaming-content-fragment>
