--- a/libs/pages/public/src/lib/games/modules/conan-aoc/modules/conan-aoc-mods/conan-aoc-mods.component.html
+++ b/libs/pages/public/src/lib/games/modules/conan-aoc/modules/conan-aoc-mods/conan-aoc-mods.component.html
@@ -1,1 +1,1 @@
-<p>Conan AoC mods go here.</p>
+<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Conan/AoC/mods.md"></supremegaming-content-fragment>
