--- a/libs/pages/public/src/lib/games/modules/conan-aoc/modules/conan-aoc-pippi/conan-aoc-pippi.component.html
+++ b/libs/pages/public/src/lib/games/modules/conan-aoc/modules/conan-aoc-pippi/conan-aoc-pippi.component.html
@@ -1,1 +1,1 @@
-<p>Conan AoC Pippi documentation and/or FaQ goes here.</p>
+<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Conan/AoC/pippi.md"></supremegaming-content-fragment>
