--- a/libs/pages/public/src/lib/games/modules/conan-aoc/modules/conan-aoc-rules/conan-aoc-rules.component.html
+++ b/libs/pages/public/src/lib/games/modules/conan-aoc/modules/conan-aoc-rules/conan-aoc-rules.component.html
@@ -1,1 +1,1 @@
-<p>Conan AoC rules goes here.</p>
+<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Conan/AoC/rules.md"></supremegaming-content-fragment>
