--- a/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-mods/ark-pf-mods.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-mods/ark-pf-mods.component.html
@@ -1,1 +1,1 @@
-<p>Ark PF mods go here.</p>
+<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Ark/PrimalFear/mods.md"></supremegaming-content-fragment>
