--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-mods/ark-mods.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-mods/ark-mods.component.html
@@ -1,1 +1,1 @@
-<p>Ark mods go here.</p>
+<supremegaming-content-fragment url="https://raw.githubusercontent.com/Proantagonist/SupremeGamingRules/staging/Ark/PVE/mods.md"></supremegaming-content-fragment>
