Lint and formatting pass

--- a/libs/pages/public/src/lib/donation/donation.component.html
+++ b/libs/pages/public/src/lib/donation/donation.component.html
@@ -1,10 +1,10 @@
-<app-sub-header>
+<supremegaming-sub-header>
   <div class="left-content">
     <a href="http://">Plugin Unlocks</a>
     <a href="http://">Shop</a>
     <a href="http://">Kits</a>
   </div>
-</app-sub-header>
+</supremegaming-sub-header>
 
 <section class="root">
   <div class="container12">
