--- a/libs/pages/public/src/lib/games/modules/ark/ark.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/ark.component.html
@@ -1,5 +1,5 @@
 <div class="column12">
-  <app-sub-header>
+  <supremegaming-sub-header>
     <div class="left-content">
       <a [routerLink]="['./']" routerLinkActive="active-sub-menu" [routerLinkActiveOptions]="{exact: true}">Ark</a>
       <a [routerLink]="['rules']" routerLinkActive="active-sub-menu">Rules</a>
@@ -8,7 +8,7 @@
       <a [routerLink]="['plugins']" routerLinkActive="active-sub-menu">Plugins</a>
       <a [routerLink]="['supply-drops']" routerLinkActive="active-sub-menu">Supply Drops</a>
     </div>
-  </app-sub-header>
+  </supremegaming-sub-header>
 </div>
 
 <div class="column12">
