--- a/libs/pages/public/src/lib/games/modules/atlas/atlas.component.html
+++ b/libs/pages/public/src/lib/games/modules/atlas/atlas.component.html
@@ -1,5 +1,5 @@
 <div class="column12">
-  <app-sub-header>
+  <supremegaming-sub-header>
     <div class="left-content">
       <a [routerLink]="['./']" routerLinkActive="active-sub-menu" [routerLinkActiveOptions]="{exact: true}">Atlas</a>
       <a [routerLink]="['rules']" routerLinkActive="active-sub-menu">Rules</a>
@@ -7,7 +7,7 @@
       <a [routerLink]="['mods']" routerLinkActive="active-sub-menu">Mods</a>
       <a [routerLink]="['plugins']" routerLinkActive="active-sub-menu">Plugins</a>
     </div>
-  </app-sub-header>
+  </supremegaming-sub-header>
 </div>
 
 <div class="column12">
