--- a/libs/pages/public/src/lib/community/community.component.html
+++ b/libs/pages/public/src/lib/community/community.component.html
@@ -1,11 +1,11 @@
-<app-sub-header>
+<supremegaming-sub-header>
   <div class="left-content">
     <a [routerLink]="['rules']" routerLinkActive="active-sub-menu">Community Rules</a>
     <a [routerLink]="['support']" routerLinkActive="active-sub-menu">Support</a>
     <a href="https://www.reddit.com/r/SupremeGaming/" target="_blank">Reddit</a>
     <a href="https://supremegaming.gg/forums/">Forums</a>
   </div>
-</app-sub-header>
+</supremegaming-sub-header>
 
 <section class="root">
   <div class="container12">
