--- a/libs/pages/public/src/lib/games/modules/conan-aoc/conan-aoc.component.html
+++ b/libs/pages/public/src/lib/games/modules/conan-aoc/conan-aoc.component.html
@@ -3,6 +3,7 @@
     <div class="left-content">
       <a [routerLink]="['./']" routerLinkActive="active-sub-menu" [routerLinkActiveOptions]="{exact: true}">Conan AoC</a>
       <a [routerLink]="['rules']" routerLinkActive="active-sub-menu">Rules</a>
+      <a [routerLink]="['settings']" routerLinkActive="active-sub-menu">Settings</a>
       <a [routerLink]="['players-and-tribes']" routerLinkActive="active-sub-menu">Players &amp; Clans</a>
       <a [routerLink]="['mods']" routerLinkActive="active-sub-menu">Mods</a>
       <a [routerLink]="['pippi']" routerLinkActive="active-sub-menu">Pippi</a>
