Reworded conan aoc to just conan
All verisons of Conan will live under it

--- a/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
+++ b/libs/ui/src/lib/modules/skeleton/components/header/header.component.html
@@ -152,32 +152,32 @@
                 </div>
               </li>
               <li class="descriptive-menu-item">
-                <a [routerLink]="['/games/conan-aoc']" routerLinkActive="router-link-active">
-                  <span>Conan Exiles AoC</span>
+                <a [routerLink]="['/games/conan']" routerLinkActive="router-link-active">
+                  <span>Conan Exiles </span>
                   <span>Get lost in a barbaric world of fantasy</span>
                 </a>
                 <div class="sub-sub-menu">
                   <ul>
                     <li>
-                      <a [routerLink]="['/games/conan-aoc/rules']">
+                      <a [routerLink]="['/games/conan/rules']">
                         <span>Rules</span>
                         <span>The law of the sands</span>
                       </a>
                     </li>
                     <li>
-                      <a [routerLink]="['/games/conan-aoc/players-and-tribes']">
+                      <a [routerLink]="['/games/conan/players-and-tribes']">
                         <span>Players &amp; Clans</span>
                         <span>Learn about clan membership</span>
                       </a>
                     </li>
                     <li>
-                      <a [routerLink]="['/games/conan-aoc/mods']">
+                      <a [routerLink]="['/games/conan/mods']">
                         <span>Mods</span>
                         <span>Mod collection featured in-game</span>
                       </a>
                     </li>
                     <li>
-                      <a [routerLink]="['/games/conan-aoc/pippi']">
+                      <a [routerLink]="['/games/conan/pippi']">
                         <span>Pippi</span>
                         <span>Kits, currency, ranks, and more!</span>
                       </a>
