Added server ark server list
List is currently being pulled form a static source. Once API V2 is written, the servers list will be pulled from an API

--- a/libs/pages/public/src/lib/games/modules/ark/modules/ark-overview/ark-overview.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark/modules/ark-overview/ark-overview.component.html
@@ -1,3 +1,5 @@
-<p>Ark overview, showcase, and server list goes here.</p>
+<h1>PVE Your Style?</h1>
 
-<pre>{{servers | async | json}}</pre>
+<p>We've got you covered! Build at your own leisure without the constant fear of losing your many hours of hard work to a griefer at our clustered PVE servers. They carry some tasteful cosmetic PVE-oriented mods but inherit the same general configuration as the PVP cluster...just without the PVP.</p>
+
+<supremegaming-server-list [servers]="servers | async" class="leader-2"></supremegaming-server-list>
