--- a/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-overview/ark-pf-overview.component.html
+++ b/libs/pages/public/src/lib/games/modules/ark-pf/modules/ark-pf-overview/ark-pf-overview.component.html
@@ -1,1 +1,5 @@
-<p>Ark PF overview, showcase, and server list goes here.</p>
+<h1>Need a bigger challenge?</h1>
+
+<p>Say no more. Supreme Gaming also offers a flavor of Ark which provides players with a completely different and exciting challenge. It's Ark cranked to 11.</p>
+
+<supremegaming-server-list [servers]="servers | async" class="leader-2"></supremegaming-server-list>
