--- a/libs/ui/src/lib/modules/servers/components/server-overview/server-overview.component.scss
+++ b/libs/ui/src/lib/modules/servers/components/server-overview/server-overview.component.scss
@@ -1,5 +1,6 @@
 @import 'libs/scss/mixins';
 @import 'libs/scss/colors';
+@import 'libs/scss/modules/servers/server-status';
 
 :host {
   margin-top: 0.75rem;
@@ -25,39 +26,6 @@
 }
 
 .info {
-  .status-container {
-    @include flexbox();
-    @include align-items(center);
-
-    .server-name {
-      font-size: 1.1rem;
-      font-weight: 600;
-      margin-right: 1rem;
-    }
-
-    .status-dot {
-      height: 0.3rem;
-      width: 0.3rem;
-      border-radius: 10rem;
-      display: block;
-
-      &.online {
-        background: #00e658;
-        box-shadow: 0 0 8px 3px #00e658;
-      }
-
-      &.offline {
-        background: #ff3d00;
-        box-shadow: 0 0 8px 3px #ff3d00;
-      }
-
-      &.busy {
-        background: #e6bc00;
-        box-shadow: 0 0 8px 3px #e6bc00;
-      }
-    }
-  }
-
   .server-ip {
     color: $primary_lightened;
     font-size: 0.75rem;
@@ -81,17 +49,5 @@
 
       @include transition(opacity 0.3s);
     }
-  }
-}
-
-.loader {
-  height: 0.8rem;
-  width: 0.8rem;
-  display: block;
-  margin: 0;
-  margin-left: -0.25rem;
-
-  &:after {
-    background-color: $base;
   }
 }
